# roma-data-pipeline

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-DATA  README.md  mkdocs.yml  pyproject.toml  roma_aeterna.sqlite-shm
.github/ISSUE_TEMPLATE/: bug_report.md  data_source_request.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: academic-use.md  cli-reference.md  contributing.md  data-model.md  data-sources.md  index.md  python-api.md  quickstart.md
examples/: basic_usage.py  custom_filters.py  export_data.py  jupyter_demo.ipynb  travel_calculator.py
src/roma_data/: __init__.py  __main__.py  cli.py  config.py  constants.py  pipeline.py
src/roma_data/export/: __init__.py  csv.py  geojson.py  sqlite.py
src/roma_data/sources/: __init__.py  awmc.py  base.py  itinere.py  orbis.py  pleiades.py  topostext.py  wikidata.py
src/roma_data/spatial/: __init__.py  index.py
src/roma_data/transform/: __init__.py  enrichment.py  events.py  locations.py  people.py  provinces.py  roads.py
src/roma_data/validation/: __init__.py  checks.py
tests/: __init__.py  conftest.py  test_config.py  test_export.py  test_validation.py
tests/fixtures/: pleiades_sample.json  roads_sample.geojson
