[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roma-data-pipeline"
version = "0.1.1"
description = "Comprehensive ETL pipeline for Roman world data from Pleiades, ORBIS, Wikidata, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Thomas Palaio" }
]
keywords = [
    "roman-history",
    "ancient-geography",
    "digital-humanities",
    "geospatial",
    "linked-data",
    "pleiades",
    "orbis",
    "etl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "tqdm>=4.64",
    "rich>=13.0",
    "pandas>=2.0",
    "geopandas>=0.14",
    "shapely>=2.0",
    "SPARQLWrapper>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "pre-commit>=3.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
roma-data = "roma_data.cli:main"

[project.urls]
Homepage = "https://github.com/thomaspalaio/roma-data-pipeline"
Documentation = "https://github.com/thomaspalaio/roma-data-pipeline#readme"
Repository = "https://github.com/thomaspalaio/roma-data-pipeline"
Issues = "https://github.com/thomaspalaio/roma-data-pipeline/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
]

[tool.hatch.build.targets.wheel]
packages = ["src/roma_data"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --cov=roma_data --cov-report=term-missing"

[tool.coverage.run]
source = ["src/roma_data"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
